# florence2_ros2_wrapper

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml
docker/: entrypoint.sh
florence2_interfaces/: CMakeLists.txt  package.xml
florence2_interfaces/action/: ExecuteTask.action
florence2_interfaces/srv/: ExecuteTask.srv
florence2_ros2/: package.xml  requirements.txt  setup.cfg  setup.py
florence2_ros2/florence2_ros2/: florence2_action_example.py  florence2_node.py  florence2_service_call_example.py
florence2_ros2/launch/: example_launch.py  florence2_launch.py
