<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>florence2_ros2</name>
  <version>0.0.1</version>
  <description>Florence-2 ROS2 wrapper node</description>
  <maintainer email="je.dominguez.vidal@gmail.com">J. E. Domínguez-Vidal</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>florence2_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
